--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "react-ts-scss-boilerplate",
   "version": "1.0.0",
   "description": "",
+  "packageManager": "pnpm@8.15.0",
+  "type": "module",
   "scripts": {
     "precommit": "lint-staged",
-    "dev": "parcel serve src/index.html --open",
-    "build": "rm -rf dist & parcel build src/index.html --dist-dir dist --no-source-maps"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
@@ -33,21 +36,22 @@
     ]
   },
   "dependencies": {
-    "classnames": "^2.3.1",
+    "classnames": "^2.5.1",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.2.1",
-    "@types/react": "^17.0.6",
-    "eslint-config-prettier": "^8.3.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
-    "parcel": "^2.2.1",
-    "prettier": "^2.3.0",
-    "sass": "^1.34.0",
-    "typescript": "^4.2.4",
-    "xo": "^0.40.1"
+    "@types/lodash": "^4.17.16",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.11",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.7",
+    "xo": "^0.60.0"
   }
 }
